# Bootrom_trial

./: .gitignore  .gitmodules  Basic_command_run.txt  CMakeLists.txt  Makefile  README.md  README_NG.md  README_SB.md  README_SIGN.md  toolchain.cmake
bootrom/: main.c
bootrom/arch/: README.md
bootrom/arch/arm/r5f/: CMakeLists.txt  README.md  linker.ld  startup.S  sys_registers.h
bootrom/crypto/: README.md  crypto_common.c  crypto_common.h  crypto_config.h.in  crypto_wrapper.c  crypto_wrapper.h
bootrom/crypto/backends/: crypto_hw.c  crypto_hw.h  crypto_pk.c  crypto_pk.h  crypto_psa.c  crypto_psa.h  crypto_sw.c  crypto_sw.h
bootrom/drivers/: README.md  flash.c  flash.h  sd.c  sd.h  uart.c  uart.h  watchdog.c  watchdog.h
bootrom/platform/: README.md  platform.c  platform.h  platform_mbedtls.h
bootrom/secure_boot/: README.md  mbedtls_config.h  secure_boot_core.c  secure_boot_core.h
bootrom/tests/: test_crypto.c  test_crypto.h  test_framework.c  test_framework.h  test_main.c  test_secure_boot.c  test_secure_boot.h
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  README_NG.md  README_TEST.md  api.md  architecture.md  security.md  troubleshooting.md
scripts/: check-security.sh  test-build-options.sh
tools/boot_signer/: CMakeLists.txt  README.md  image_builder.h  image_builder_mbedtls.c  image_builder_openssl.c  main.c
